--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             margin: 0;
             padding: 0;
             height: 100%;
+            background-color: rgb(0, 54, 82)
         }
 
         body {
