--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Calendar</title>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/diy-electron1cs/DE_calendar/main/style.css">
 </head>
 
 <body class="background-set">
@@ -43,10 +44,10 @@
 
 
 
-    <script src="clock.js"></script>
-    <script src="calendar.js"></script>
-    <script src="decorator.js"></script>
-    <script src="holidays.js"></script>
+    <script src="https://raw.githubusercontent.com/diy-electron1cs/DE_calendar/main/clock.js"></script>
+    <script src="https://raw.githubusercontent.com/diy-electron1cs/DE_calendar/main/calendar.js"></script>
+    <script src="https://raw.githubusercontent.com/diy-electron1cs/DE_calendar/main/decorator.js"></script>
+    <script src="https://raw.githubusercontent.com/diy-electron1cs/DE_calendar/main/holidays.js"></script>
 
 
 </body>
