--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 
 
 
-    <script src="https://raw.githubusercontent.com/diy-electron1cs/DE_calendar/main/clock.js"></script>
-    <script src="https://raw.githubusercontent.com/diy-electron1cs/DE_calendar/main/calendar.js"></script>
-    <script src="https://raw.githubusercontent.com/diy-electron1cs/DE_calendar/main/decorator.js"></script>
-    <script src="https://raw.githubusercontent.com/diy-electron1cs/DE_calendar/main/holidays.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/diy-electron1cs/DE_calendar@main/clock.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/diy-electron1cs/DE_calendar@main/calendar.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/diy-electron1cs/DE_calendar@main/decorator.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/diy-electron1cs/DE_calendar@main/holidays.js"></script>
 
 
 </body>
