--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
     </footer>
 
 
-<script src="https://raw.githubusercontent.com/diy-electron1cs/DE_calendar/main/clock.js"></script><script src="https://raw.githubusercontent.com/diy-electron1cs/DE_calendar/main/calendar.js"></script>
+<script src="https://raw.githubusercontent.com/diy-electron1cs/DE_calendar/main/clock.js"></script>
+<script src="https://raw.githubusercontent.com/diy-electron1cs/DE_calendar/main/calendar.js"></script>
 <script src="https://raw.githubusercontent.com/diy-electron1cs/DE_calendar/main/decorator.js"></script>
 <script src="https://raw.githubusercontent.com/diy-electron1cs/DE_calendar/main/holidays.js"></script>
 
