--- a/index.html
+++ b/index.html
@@ -33,20 +33,15 @@
 
     </main>
 
-
-
-
     <div id="gradient2" class="back-img"></div>
     <footer class="back-img">
         <p class="footer">DE</p>
     </footer>
 
-
-<script src="https://raw.githubusercontent.com/diy-electron1cs/DE_calendar/main/clock.js"></script>
-<script src="https://raw.githubusercontent.com/diy-electron1cs/DE_calendar/main/calendar.js"></script>
-<script src="https://raw.githubusercontent.com/diy-electron1cs/DE_calendar/main/decorator.js"></script>
-<script src="https://raw.githubusercontent.com/diy-electron1cs/DE_calendar/main/holidays.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/gh/diy-electron1cs/DE_calendar@main/clock.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/diy-electron1cs/DE_calendar@main/calendar.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/diy-electron1cs/DE_calendar@main/decorator.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/diy-electron1cs/DE_calendar@main/holidays.js"></script>
 </body>
 
 </html>
